--- a/index.html
+++ b/index.html
@@ -112,19 +112,24 @@
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
-              autem suscipit doloribus nisi temporibus nulla dolorum vero,
-              quibusdam, sequi eius fugit reprehenderit, unde qui aperiam earum
-              praesentium vitae esse? Soluta?
+              Dedicated software developer with a passion for crafting efficient
+              and innovative solutions. Proficient in various programming
+              languages and experienced in developing, testing, and maintaining
+              software applications. Adept at collaborating with
+              cross-functional teams to deliver high-quality, user-centric
+              products. Committed to staying updated with the latest
+              technological advancements and continuously enhancing skills to
+              drive impactful results.
             </p>
           </div>
         </div>
       </div>
-      <img 
-        src="./assets/arrow.png" 
-        alt="Arrow icon" 
+      <img
+        src="./assets/arrow.png"
+        alt="Arrow icon"
         class="icon arrow"
-        onclick="location.href='./#experience'"/>
+        onclick="location.href='./#experience'"
+      />
     </section>
 
     <section id="experience">
@@ -136,64 +141,70 @@
             <h2 class="experience-sub-title">Fronted Development</h2>
             <div class="article-container">
               <article>
-                <img 
-                  src="./assets/checkmark.png" 
-                  alt="Experience icon" 
-                  class="icon">
-                  <div>
-                    <h3>HTML</h3>
-                    <p>Experienced</p>
-                  </div>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>HTML</h3>
+                  <p>Experienced</p>
+                </div>
               </article>
               <article>
-                <img 
-                  src="./assets/checkmark.png" 
-                  alt="Experience icon" 
-                  class="icon">
-                  <div>
-                    <h3>CSS</h3>
-                    <p>Experienced</p>
-                  </div>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>CSS</h3>
+                  <p>Experienced</p>
+                </div>
               </article>
               <article>
-                <img 
-                  src="./assets/checkmark.png" 
-                  alt="Experience icon" 
-                  class="icon">
-                  <div>
-                    <h3>JavaScript</h3>
-                    <p>Intermediate</p>
-                  </div>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>JavaScript</h3>
+                  <p>Intermediate</p>
+                </div>
               </article>
               <article>
-                <img 
-                  src="./assets/checkmark.png" 
-                  alt="Experience icon" 
-                  class="icon">
-                  <div>
-                    <h3>AngularJs</h3>
-                    <p>Intermediate</p>
-                  </div>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>AngularJs</h3>
+                  <p>Intermediate</p>
+                </div>
               </article>
               <article>
-                <img 
-                  src="./assets/checkmark.png" 
-                  alt="Experience icon" 
-                  class="icon">
-                  <div>
-                    <h3>Google DevOps</h3>
-                    <p>Experienced</p>
-                  </div>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Google DevOps</h3>
+                  <p>Experienced</p>
+                </div>
               </article>
               <article>
-                <img 
-                  src="./assets/checkmark.png" 
-                  alt="Experience icon" 
-                  class="icon">
-                  <div>
-                    <h3>Microsoft Azure</h3>
-                    <p>Experienced</p>
-                  </div>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Microsoft Azure</h3>
+                  <p>Experienced</p>
+                </div>
               </article>
             </div>
           </div>
@@ -201,56 +212,193 @@
             <h2 class="experience-sub-title">Backend Development</h2>
             <div class="article-container">
               <article>
-                <img 
-                  src="./assets/checkmark.png" 
-                  alt="Experience icon" 
-                  class="icon">
-                  <div>
-                    <h3>SQL Server Management Studio</h3>
-                    <p>Basic</p>
-                  </div>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>SQL Server Management Studio</h3>
+                  <p>Basic</p>
+                </div>
               </article>
               <article>
-                <img 
-                  src="./assets/checkmark.png" 
-                  alt="Experience icon" 
-                  class="icon">
-                  <div>
-                    <h3>Node JS</h3>
-                    <p>Intermediate</p>
-                  </div>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Node JS</h3>
+                  <p>Intermediate</p>
+                </div>
               </article>
               <article>
-                <img 
-                  src="./assets/checkmark.png" 
-                  alt="Experience icon" 
-                  class="icon">
-                  <div>
-                    <h3>Express JS</h3>
-                    <p>Intermediate</p>
-                  </div>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Express JS</h3>
+                  <p>Intermediate</p>
+                </div>
               </article>
               <article>
-                <img 
-                  src="./assets/checkmark.png" 
-                  alt="Experience icon" 
-                  class="icon">
-                  <div>
-                    <h3>Git</h3>
-                    <p>Intermediate</p>
-                  </div>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Git</h3>
+                  <p>Intermediate</p>
+                </div>
               </article>
             </div>
           </div>
         </div>
       </div>
-      <img src="./assets/arrow.png" 
-        alt="Arrow icon" 
+      <img
+        src="./assets/arrow.png"
+        alt="Arrow icon"
         class="icon arrow"
-        onclick="location.href='./#projects'"/>
+        onclick="location.href='./#projects'"
+      />
     </section>
 
-    
+    <section id="projects">
+      <p class="section__text__p1">Browse My Recent</p>
+      <h1 class="title">Projects</h1>
+      <div class="experience-details-container">
+        <div class="about-containers">
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/project-1.png"
+                alt="Project 1"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Project One</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                oncanplay="location.href='https://github.com/YasharTukhfatullin'"
+              >
+                GitHub
+              </button>
+
+              <button
+                class="btn btn-color-2 project-btn"
+                oncanplay="location.href='https://github.com/YasharTukhfatullin'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/project-2.png"
+                alt="Project 1"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Project Two</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                oncanplay="location.href='https://github.com/YasharTukhfatullin'"
+              >
+                GitHub
+              </button>
+
+              <button
+                class="btn btn-color-2 project-btn"
+                oncanplay="location.href='https://github.com/YasharTukhfatullin'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/project-3.png"
+                alt="Project 1"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Project Three</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                oncanplay="location.href='https://github.com/YasharTukhfatullin'"
+              >
+                GitHub
+              </button>
+
+              <button
+                class="btn btn-color-2 project-btn"
+                oncanplay="location.href='https://github.com/YasharTukhfatullin'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <img
+        src="./assets/arrow.png"
+        alt="Arrow icon"
+        class="icon arrow"
+        onclick="location.href='./#projects'"
+      />
+    </section>
+
+    <section id="contact">
+      <p class="section__text__p1">Get in Touch</p>
+      <h1 class="title">Contact Me</h1>
+      <div class="contact-info-upper-container">
+        <div class="contact-info-container">
+          <img
+            src="./assets/email.png"
+            alt="Email icon"
+            class="icon contact-icon email-icon"
+          />
+          <p><a href="yashnar2010@gmail.com">yashar2010@gmail.com</a></p>
+        </div>
+
+        <div class="contact-info-container">
+          <img
+            src="./assets/linkedin.png"
+            alt="Linkedin icon"
+            class="icon contact-icon"
+          />
+          <p>
+            <a href="https://www.linkedin.com/in/yashar-tukhfatullin-7214631b7/"
+              >LinkedIn</a
+            >
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <nav>
+        <div class="nav-links-contaner">
+          <ul class="nav-links">
+            <li><a href="#about">About</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+      <p>Copyright &#169; 2023 Yashar Tukhfatullin. All Rights Reserved.</p>
+    </footer>
+
     <script src="script.js"></script>
   </body>
 </html>
