--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="btc-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('./assets/bitcoin.pdf')"
           >
             Download CV
           </button>
